syntax = "proto3";

package company;

service CompanyService {
  rpc GetCompany(GetCompanyRequest) returns (CompanyResponse);
  rpc CreateCompany(CreateCompanyRequest) returns (CompanyResponse);
  rpc UpdateCompany(UpdateCompanyRequest) returns (CompanyResponse);
  rpc DeleteCompany(DeleteCompanyRequest) returns (CompanyResponse);
}

message GetCompanyRequest {
  string id = 1;
}

message CreateCompanyRequest {
  string name = 1;
  string location = 2;
}

message UpdateCompanyRequest {
  string id = 1;
  string name = 2;
  string location = 3;
}

message DeleteCompanyRequest {
  string id = 1;
}

message CompanyResponse {
  string id = 1;
  string name = 2;
  string location = 3;
}
